test/compile_errors/stage1/obj/variable_with_type_noreturn.zig
export fn entry9() void {
    var z: noreturn = return;
}

// variable with type 'noreturn'
//
// tmp.zig:2:5: error: unreachable code
// tmp.zig:2:23: note: control flow is diverted here
